--- a/roles/horizon/templates/etc/apache2/sites-available/openstack-dashboard-ssl.conf
+++ b/roles/horizon/templates/etc/apache2/sites-available/openstack-dashboard-ssl.conf
@@ -2,8 +2,8 @@
     ServerAdmin webmaster@localhost
     GnuTLSEnable on
     GnuTLSPriorities NORMAL
-    GnuTLSCertificateFile /etc/ssl/certs/ssl-cert-snakeoil.pem
-    GnuTLSKeyFile /etc/ssl/private/ssl-cert-snakeoil.key
+    GnuTLSCertificateFile {{ ssl_cert_file }}
+    GnuTLSKeyFile {{ ssl_key_file }}
     BrowserMatch "MSIE [2-6]" \
         nokeepalive ssl-unclean-shutdown \
         downgrade-1.0 force-response-1.0
