Changing neutron interface driver name due to an error

--- a/roles/neutron-agents/templates/etc/neutron/dhcp_agent.ini
+++ b/roles/neutron-agents/templates/etc/neutron/dhcp_agent.ini
@@ -18,7 +18,7 @@ ovs_integration_bridge = br-int
 #network_device_mtu = <None>
 
 # The driver used to manage the virtual interface. (string value)
-interface_driver = neutron.agent.linux.interface.OVSInterfaceDriver
+interface_driver = openvswitch
 
 # Timeout in seconds for ovs-vsctl commands. If the timeout expires, ovs commands will fail with ALARMCLOCK error. (integer value)
 #ovs_vsctl_timeout = 10
