--- a/roles/keystoneserver/handlers/main.yml
+++ b/roles/keystoneserver/handlers/main.yml
@@ -10,3 +10,6 @@
 - name: start apache2
   service: name=apache2 state=started
 
+- name: restart apache2
+  service: name=apache2 state=restarted
+
