--- a/roles/neutronserver/templates/etc/neutron/neutron.conf
+++ b/roles/neutronserver/templates/etc/neutron/neutron.conf
@@ -27,7 +27,7 @@ auth_strategy = keystone
 core_plugin = neutron.plugins.ml2.plugin.Ml2Plugin
 
 # The service plugins Neutron will use (list value)
-service_plugins = neutron.services.l3_router.l3_router_plugin.L3RouterPlugin
+service_plugins = neutron.services.l3_router.l3_router_plugin.L3RouterPlugin,neutron_lbaas.services.loadbalancer.plugin.LoadBalancerPluginv2
 
 # The base MAC address Neutron will use for VIFs. The first 3 octets will remain unchanged. If the 4th octet is not 00, it will also be
 # used. The others will be randomly generated. (string value)
@@ -141,7 +141,7 @@ notify_nova_on_port_data_changes = True
 # networks, neutron uses this value without modification. For overlay networks such as VXLAN, neutron automatically subtracts the overlay
 # protocol overhead from this value. Defaults to 1500, the standard value for Ethernet. (integer value)
 # Deprecated group/name - [ml2]/segment_mtu
-#global_physnet_mtu = 1500
+global_physnet_mtu = 9000
 
 # Number of backlog requests to configure the socket with (integer value)
 #backlog = 4096
@@ -1348,3 +1348,6 @@ lock_path = /var/lock/neutron
 
 # Sets the list of available ciphers. value should be a string in the OpenSSL cipher list format. (string value)
 #ciphers = <None>
+
+[service_providers]
+service_provider = LOADBALANCERV2:Haproxy:neutron_lbaas.drivers.haproxy.plugin_driver.HaproxyOnHostPluginDriver:default
