--- a/roles/neutronserver/templates/etc/neutron/plugins/ml2/ml2_conf.ini
+++ b/roles/neutronserver/templates/etc/neutron/plugins/ml2/ml2_conf.ini
@@ -103,7 +103,7 @@ extension_drivers = port_security
 # DHCP option 26. For example, using a value of 9000, DHCP provides 8950 to instances using a VXLAN network that contains 50 bytes of
 # overhead. Using a value of 0 disables this feature and instances typically default to a 1500 MTU. Only impacts instances, not neutron
 # network components such as bridges and routers. (integer value)
-#path_mtu = 1500
+path_mtu = 1500
 
 # A list of mappings of physical networks to MTU values. The format of the mapping is <physnet>:<mtu val>. This mapping allows specifying a
 # physical network MTU value that differs from the default segment_mtu value. (list value)
