--- a/roles/neutron-agents/handlers/main.yml
+++ b/roles/neutron-agents/handlers/main.yml
@@ -5,6 +5,7 @@
     - neutron-dhcp-agent
     - neutron-metadata-agent
     - neutron-openvswitch-agent
+    - neutron-lbaas-agent
     
 - name: restart openvswitch services
   service: name=openvswitch-switch state=restarted
