Modifying vif_plugging_timeout

--- a/roles/novaserver/templates/etc/nova/nova.conf
+++ b/roles/novaserver/templates/etc/nova/nova.conf
@@ -1373,7 +1373,7 @@ auth_strategy = keystone
 #
 # * None
 #  (boolean value)
-#vif_plugging_is_fatal = true
+vif_plugging_is_fatal = false
 
 # Timeout for Neutron VIF plugging event message arrival.
 #
@@ -1394,7 +1394,7 @@ auth_strategy = keystone
 #
 # * None
 #  (integer value)
-#vif_plugging_timeout = 300
+vif_plugging_timeout = 10
 
 # Firewall driver to use with ``nova-network`` service.
 #
@@ -3441,7 +3441,7 @@ password = {{ nova_identity_password }}
 # named CPU model; to "none" to not set any CPU model. If virt_type="kvm|qemu", it will default to "host-model", otherwise it will default
 # to "none" (string value)
 # Allowed values: host-model, host-passthrough, custom, none
-#cpu_mode = <None>
+cpu_mode = host-passthrough
 
 # Set to a named libvirt CPU model (see names listed in /usr/share/libvirt/cpu_map.xml). Only has effect if cpu_mode="custom" and
 # virt_type="kvm|qemu" (string value)
