--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,4 @@
 [defaults]
-hostfile = ansible_hosts
+inventory = ansible_hosts
 remote_user = vagrant
-private_key_file = .vagrant/machines/controller/virtualbox/private_key
 host_key_checking = False
