--- a/roles/dbserver_population/tasks/main.yml
+++ b/roles/dbserver_population/tasks/main.yml
@@ -2,29 +2,28 @@
   mysql_db: name=keystone
 
 - name: ensure keystone database user is present
-  mysql_user: >
-    name=keystone host={{ item }}
-    password={{ keystone_db_password }}
-    priv=keystone.*:ALL
-  with_items:
+  mysql_user:
+    name: keystone
+    host: "{{ item }}"
+    password: "{{ keystone_db_password }}"
+    priv: 'keystone.*:ALL'
+  loop:
     - "{{ controller_ip }}"
     - 127.0.0.1
     - localhost
     - ::1
 
 - name: ensure glance database is present
-  mysql_db: >
-    name=glance
-    encoding=utf8
-    collation=utf8_general_ci
+  mysql_db:
+    name: glance
 
 - name: ensure glance database user is present
-  mysql_user: >
-    name=glance
-    host={{ item }}
-    password={{ glance_db_password }}
-    priv=glance.*:ALL
-  with_items:
+  mysql_user:
+    name: glance
+    host: "{{ item }}"
+    password: "{{ glance_db_password }}"
+    priv: 'glance.*:ALL'
+  loop:
     - "{{ controller_ip }}"
     - 127.0.0.1
     - localhost
@@ -34,12 +33,12 @@
   mysql_db: name=cinder
 
 - name: ensure cinder database user is present
-  mysql_user: >
-    name=cinder
-    host={{ item }}
-    password={{ cinder_db_password }}
-    priv=cinder.*:ALL
-  with_items:
+  mysql_user:
+    name: cinder
+    host: "{{ item }}"
+    password: "{{ cinder_db_password }}"
+    priv: 'cinder.*:ALL'
+  loop:
     - "{{ controller_ip }}"
     - 127.0.0.1
     - localhost
@@ -49,43 +48,72 @@
   mysql_db: name=manila
 
 - name: ensure manila database user is present
-  mysql_user: >
-    name=manila
-    host={{ item }}
-    password={{ manila_db_password }}
-    priv=manila.*:ALL
-  with_items:
+  mysql_user:
+    name: manila
+    host: "{{ item }}"
+    password: "{{ manila_db_password }}"
+    priv: 'manila.*:ALL'
+  loop:
     - "{{ controller_ip }}"
     - 127.0.0.1
     - localhost
     - ::1
 
-- name: ensure nova and nova_api databases are present
+- name: ensure placement databases is present
+  mysql_db: name=placement
+
+- name: ensure placement database user is present
+  mysql_user:
+    name: placement
+    host: "{{ item }}"
+    password: "{{ placement_db_password }}"
+    priv: 'placement.*:ALL'
+  loop:
+    - "{{ controller_ip }}"
+    - 127.0.0.1
+    - localhost
+    - ::1
+
+- name: ensure nova, nova_cell0 and nova_api databases are present
   mysql_db: name={{ item }}
-  with_items:
+  loop:
     - nova
     - nova_api
+    - nova_cell0
 
 - name: ensure nova database user is present in nova 
-  mysql_user: >
-    name=nova
-    host={{ item }}
-    password={{ nova_db_password }}
-    priv=nova.*:ALL
-  with_items:
+  mysql_user:
+    name: nova
+    host: "{{ item }}"
+    password: "{{ nova_db_password }}"
+    priv: 'nova.*:ALL'
+  loop:
     - '%'
     - localhost
     - 127.0.0.1
     - ::1
 
 - name: ensure nova database user is present in nova_api
-  mysql_user: >
-    name=nova
-    host={{ item }}
-    password={{ nova_db_password }}
-    priv=nova_api.*:ALL
-    append_privs=yes
-  with_items:
+  mysql_user:
+    name: nova
+    host: "{{ item }}"
+    password: "{{ nova_db_password }}"
+    priv: 'nova_api.*:ALL'
+    append_privs: yes
+  loop:
+    - '%'
+    - localhost
+    - 127.0.0.1
+    - ::1
+
+- name: ensure nova database user is present in nova_cell0
+  mysql_user:
+    name: nova
+    host: "{{ item }}"
+    password: "{{ nova_db_password }}"
+    priv: 'nova_cell0.*:ALL'
+    append_privs: yes
+  loop:
     - '%'
     - localhost
     - 127.0.0.1
@@ -95,12 +123,12 @@
   mysql_db: name=neutron
     
 - name: ensure neutron database user is present
-  mysql_user: >
-    name=neutron
-    host={{ item }}
-    password={{ neutron_db_password }}
-    priv=neutron.*:ALL
-  with_items:
+  mysql_user:
+    name: neutron
+    host: "{{ item }}"
+    password: "{{ neutron_db_password }}"
+    priv: 'neutron.*:ALL'
+  loop:
     - "{{ controller_ip }}"
     - 127.0.0.1
     - localhost
@@ -110,12 +138,12 @@
   mysql_db: name=heat
     
 - name: ensure heat database user is present
-  mysql_user: >
-    name=heat
-    host={{ item }}
-    password={{ heat_db_password }}
-    priv=heat.*:ALL
-  with_items:
+  mysql_user:
+    name: heat
+    host: "{{ item }}"
+    password: "{{ heat_db_password }}"
+    priv: 'heat.*:ALL'
+  loop:
     - "{{ controller_ip }}"
     - 127.0.0.1
     - localhost
@@ -125,12 +153,12 @@
   mysql_db: name=trove
     
 - name: ensure trove database user is present
-  mysql_user: >
-    name=trove
-    host={{ item }}
-    password={{ trove_db_password }}
-    priv=trove.*:ALL
-  with_items:
+  mysql_user:
+    name: trove
+    host: "{{ item }}"
+    password: "{{ trove_db_password }}"
+    priv: 'trove.*:ALL'
+  loop:
     - "{{ controller_ip }}"
     - 127.0.0.1
     - localhost
@@ -140,15 +168,13 @@
   mysql_db: name=magnum
     
 - name: ensure magnum database user is present
-  mysql_user: >
-    name=magnum
-    host={{ item }}
-    password={{ magnum_db_password }}
-    priv=magnum.*:ALL
-  with_items:
+  mysql_user:
+    name: magnum
+    host: "{{ item }}"
+    password: "{{ magnum_db_password }}"
+    priv: 'magnum.*:ALL'
+  loop:
     - "{{ controller_ip }}"
     - 127.0.0.1
     - localhost
     - ::1
-                   
-
