--- a/roles/keystoneserver/templates/etc/apache2/sites-available/wsgi-keystone.conf
+++ b/roles/keystoneserver/templates/etc/apache2/sites-available/wsgi-keystone.conf
@@ -1,16 +1,17 @@
-Listen {{ controller_external_ip }}:5001
+Listen 5000
 
-<VirtualHost {{ controller_external_ip }}:5001>
-	GnuTLSEnable on
-	GnuTLSPriorities NORMAL
-	GnuTLSCertificateFile {{ ssl_cert_file }}
-	GnuTLSKeyFile {{ ssl_key_file }}
-	ProxyPass / uwsgi://127.0.0.1:5000/
-	ErrorLogFormat "%{cu}t %M"
-	ErrorLog /var/log/apache2/keystone.log
-	CustomLog /var/log/apache2/keystone_access.log combined
+<VirtualHost *:5000>
+    WSGIDaemonProcess keystone-public processes=5 threads=1 user=keystone group=keystone display-name=%{GROUP}
+    WSGIProcessGroup keystone-public
+    WSGIScriptAlias / /usr/bin/keystone-wsgi-public
+    WSGIApplicationGroup %{GLOBAL}
+    WSGIPassAuthorization On
+    ErrorLogFormat "%{cu}t %M"
+    ErrorLog /var/log/apache2/keystone.log
+    CustomLog /var/log/apache2/keystone_access.log combined
 
-	<Directory /usr/bin>
-		Require all granted
-	</Directory>
+    <Directory /usr/bin>
+        Require all granted
+    </Directory>
 </VirtualHost>
+
